--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,7 @@
 @import "sanitize.css/assets.css";
 @import "sanitize.css/typography.css";
 @import "open-color/open-color.css";
+@import "bootstrap/dist/css/bootstrap.min.css";
 
 :root {
   color: var(--oc-gray-8);
